# cfdoit

./: .gitignore  Readme.md  pyproject.toml
cfdoit/: __init__.py  cli.py  computeFarmTools.py  config.py  dodo.py  dodoOrig.py  envHelpers.py  packageTasks.py  srcTasks.py  taskGenerator.py  workerTasks.py
cfdoit/taskDescriptions/: __init__.py  taskSnipets.yaml
cfdoit/taskSnipets/: __init__.py  ansiCSnipets.py  dsl.py  latexSnipets.py  packageSnipets.py
scripts/: checkPythonCode  copyComputeFarmTools  docWebServer  installEditableCfdoitCommand
tests/ansic/: Readme.md  build.ronin  cfdoit.cfg  cfdoit.toml  projDesc.yaml  roninExts.py
tests/ansic/descriptions/: actionSnipets.yaml  jsonEcho.yaml
tests/ansic/descriptions/pkgs/: cppzmq.yaml  libzmq.yaml  nl-json.yaml  xeus-zmq.yaml  xeus.yaml  xtl.yaml
tests/ansic/descriptions/workers/: gcc.yaml
tests/ansic/jsonEchoKernel/src/: jeClass.cpp  jeMain.cpp
